fix/PN-15922: avoid page break on consistent information (#143)

--- a/templates-assets/styles/accessible.css
+++ b/templates-assets/styles/accessible.css
@@ -210,3 +210,7 @@ a.faq-link-perfezionamento {
     width:81px;
     height:26.24px;
 }
+
+.avoid-page-break {
+  page-break-inside: avoid;
+}
